# BounceAlgorithm

./: README.md  READme.md  robot_real.rviz  robot_sim.rviz
bounce_alg/: BounceAlgorithm.drawio  CMakeLists.txt  package.xml
bounce_alg/config/: config.yaml
bounce_alg/launch/: bounce_alg_launch.py
bounce_alg/src/: bounce_alg_node.cpp  point_cloud_processor.hpp  velocity_controller.hpp
